# nerftools

./: .cspell.json  .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nerf-plugin.yaml  nerf.yaml  pyproject.toml  release-please-config.json  rulesync.jsonc  rulesync.local.jsonc.example
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/agents/: nerftool-manifest-reviewer.md  nerftool-report-reviewer.md
.github/: dependabot.yml
.github/agents/: nerftool-manifest-reviewer.md  nerftool-report-reviewer.md
.github/workflows/: build-plugin.yml  ci.yml  release-please.yml  release.yml
.rulesync/subagents/: nerftool-manifest-reviewer.md  nerftool-report-reviewer.md
docs/: nerf-manifest.md
docs/sdd/2026-04-04-nerf-refactor/: frd.md  hla.md  locked.md  manifest-spec.md  plan.md
nerftools/: __init__.py  builder.py  cli.py  config.py  formats.py  manifest.py  outdir.py  plugin_meta.py  rendering.py  skill.py
nerftools/default_manifests/: README.md  az-account.yaml  az-aks.yaml  az-boards.yaml  az-cosmosdb.yaml  az-devops.yaml  az-keyvault.yaml  az-monitor.yaml  az-network.yaml  az-pipelines.yaml  az-postgres.yaml  az-repos.yaml  az-resource.yaml  az-role.yaml  az-storage.yaml  gh.yaml  git.yaml  kubectl.yaml  nerf-report.yaml  nx.yaml  pkgrun.yaml  stdutils.yaml  tf.yaml  tg.yaml  uv.yaml
nerftools/nerf_report/: script.sh
nerftools/nerfctl/claude/: grant-allow.sh  grant-by-threat.sh  grant-deny.sh  grant-list.sh  grant-reset.sh
ops/scripts/: _common.bash  rulesync-upgen.bash
scripts/: _common.sh  generate-plugins.sh  lint-files.sh  rulesync-upgen.bash  rulesync-upgen.sh
tests/: test_builder.py  test_config.py  test_formats.py  test_manifest.py  test_nerf_report.py  test_nerfctl.py  test_plugin_meta.py  test_rendering.py  test_skill.py
