[project]
name = "nerftools"
version = "0.1.0"
description = "Build and manage nerf tools -- defanged, scoped wrappers for agent use"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Robert Scot Hastings" },
]
dependencies = [
    "typer>=0.24.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/WayfarerLabs/nerftools"
Repository = "https://github.com/WayfarerLabs/nerftools"
Issues = "https://github.com/WayfarerLabs/nerftools/issues"

[project.scripts]
nerf = "nerftools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nerftools"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pytest>=9.0.0",
    "types-pyyaml>=6.0",
]
